# whisper-rtc

./: README.md  audioproc.py  index.html  main.py  pyproject.toml
